--- a/streampipes-wrapper-spark/pom.xml
+++ b/streampipes-wrapper-spark/pom.xml
@@ -50,6 +50,11 @@
                 <version>1.10</version>
             </dependency>
             <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
+            <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty</artifactId>
                 <version>3.9.9.Final</version>
@@ -121,6 +126,10 @@
         </dependency>
 
         <!-- External dependencies -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.github.luben</groupId>
             <artifactId>zstd-jni</artifactId>
