--- a/ui/package.json
+++ b/ui/package.json
@@ -54,7 +54,7 @@
     "angular-plotly.js": "^4.0.0",
     "@circlon/angular-tree-component": "11.0.4",
     "angular-ui-tree": "2.9.0",
-    "angular2-uuid": "1.1.1",
+    "angular2-uuid": "^1.1.1",
     "bootstrap": "3.3.4",
     "calendar-heatmap-graph": "0.0.14",
     "console-browserify": "^1.2.0",
