--- a/ui/package.json
+++ b/ui/package.json
@@ -77,7 +77,7 @@
     "quill": "1.3.7",
     "roboto-fontface": "0.10.0",
     "rxjs": "6.6.2",
-    "shepherd.js": "2.4.0",
+    "shepherd.js": "^9.0.0",
     "showdown": "1.9.1",
     "swagger-ui": "^3.42.0",
     "systemjs": "0.21.6",
