--- a/ui/package.json
+++ b/ui/package.json
@@ -51,8 +51,8 @@
     "codemirror": "^5.55.0",
     "core-js": "3.20.1",
     "dagre": "0.8.4",
-    "datatables.net": "1.10.20",
-    "datatables.net-dt": "1.10.21",
+    "datatables.net": "^1.11.4",
+    "datatables.net-dt": "^1.11.4",
     "echarts": "^5.0.1",
     "echarts-wordcloud": "^2.0.0",
     "file-saver": "1.3.8",
