--- a/streampipes-backend/pom.xml
+++ b/streampipes-backend/pom.xml
@@ -82,6 +82,10 @@
 
         <!-- Dependency convergence -->
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
