--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "test-cypress-all": "npx cypress run --spec 'cypress/tests/**/*.spec.ts'"
   },
   "dependencies": {
+    "@angular-architects/module-federation": "^14.0.1",
     "@angular/animations": "^12.2.9",
     "@angular/cdk": "^12.2.9",
     "@angular/common": "^12.2.9",
