--- a/ui/deployment/dev/config.yml
+++ b/ui/deployment/dev/config.yml
@@ -17,6 +17,7 @@ login:
   backgroundImage: 'deployment/dev/img/background.png'
   logo: 'deployment/dev/img/logo.png'
   logo-navigation: 'deployment/dev/img/logo-navigation.png'
+  favicon: 'deployment/dev/img/favicon.png'
 modules:
   - spEditor
   - spPipelines
