--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -27,6 +27,9 @@ src/app/services/version/version.service.ts
 src/app/core/components/base-navigation.component.ts
 src/assets/img/login/logo.png
 src/assets/img/sp/logo-navigation.png
+src/assets/img/favicon/favicon-96x96.png
+src/scss/sp/sp-theme.scss
+webpack.partial.dev.js
 
 # compiled output
 /dist
