--- a/ui/angular.json
+++ b/ui/angular.json
@@ -37,7 +37,7 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/jquery-ui-dist/jquery-ui.js",
-              "node_modules/quill/dist/quill.js",
+              "node_modules/quill/dist/quill.js"
             ]
           },
           "configurations": {
