--- a/ui/projects/streampipes/platform-services/package.json
+++ b/ui/projects/streampipes/platform-services/package.json
@@ -4,7 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0",
-    "rxjs": "6.6.2"
+    "rxjs": "6.6.2",
+    "angular-gridster2": "12.1.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
