--- a/ui/package.json
+++ b/ui/package.json
@@ -45,6 +45,7 @@
     "@ngx-loading-bar/http-client": "5.1.2",
     "@panzoom/panzoom": "^4.3.2",
     "@stomp/ng2-stompjs": "7.2.0",
+    "@streampipes/platform-services": "0.0.1",
     "@swimlane/ngx-charts": "16.0.0",
     "angular-datatables": "^12.0.2",
     "angular-gridster2": "12.1.1",
