--- a/ui/package.json
+++ b/ui/package.json
@@ -49,7 +49,7 @@
     "@ngx-loading-bar/core": "5.1.2",
     "@ngx-loading-bar/http-client": "5.1.2",
     "@panzoom/panzoom": "^4.4.3",
-    "@stomp/ng2-stompjs": "7.2.0",
+    "@streampipes/platform-services": "file:dist/streampipes/platform-services",
     "@swimlane/ngx-charts": "16.0.0",
     "angular-datatables": "^12.0.2",
     "angular-gridster2": "12.1.1",
