--- a/ui/nginx_config/ssl.conf
+++ b/ui/nginx_config/ssl.conf
@@ -63,55 +63,17 @@ server {
     proxy_set_header Host $http_host;
   }
 
-  location /visualizablepipeline {
-    set $upstream couchdb:5984;
+   location ~/endpoints/(?<endpointName>.*)$ {
+      set $upstream connect-adapters-iiot:8001/api/v1/worker/live/$endpointName;
 
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://$upstream;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_pass http://$upstream;
       proxy_ssl_session_reuse off;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-  }
+      proxy_set_header Host $http_host;
+    }
 
-  location /dashboard {
-    set $upstream couchdb:5984;
-    
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://$upstream;
-    proxy_ssl_session_reuse off;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-  }
-
-
-  location /pipeline {
-    set $upstream couchdb:5984;
-
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://$upstream;
-    proxy_ssl_session_reuse off;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-  }
-
-  location /swagger {
-    set $upstream swagger-ui:8080;
-
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://$upstream;
-    proxy_ssl_session_reuse off;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-  }
-  
   #error_page  404              /404.html;
 
   # redirect server error pages to the static page /50x.html
