--- a/ui/package.json
+++ b/ui/package.json
@@ -91,6 +91,7 @@
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "^13.3.0",
     "@cypress/webpack-batteries-included-preprocessor": "^2.2.3",
+    "@cypress/webpack-preprocessor": "^5.11.1",
     "@ngtools/webpack": "^13.3.0",
     "@types/angular": "^1.7.4",
     "@types/jasmine": "~3.6.0",
