--- a/streampipes-extensions/streampipes-connect-adapters-iiot/Dockerfile
+++ b/streampipes-extensions/streampipes-connect-adapters-iiot/Dockerfile
@@ -13,8 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ARG BASE_IMAGE=eclipse-temurin:11-jre-focal
-FROM $BASE_IMAGE
+FROM eclipse-temurin:11-jre-focal
 
 ENV CONSUL_LOCATION consul
 
