--- a/streampipes-extensions/streampipes-pipeline-elements-all-jvm/Dockerfile
+++ b/streampipes-extensions/streampipes-pipeline-elements-all-jvm/Dockerfile
@@ -20,9 +20,7 @@ ENV CONSUL_LOCATION consul
 EXPOSE 8090
 
 # needed pkgs processors-image-processing-jvm
-RUN apk --update add --no-cache \
-    fontconfig \
-    ttf-dejavu
+RUN apt-get update && apt-get install ttf-dejavu-core && apt-get install fontconfig
 
 COPY target/streampipes-processors-all-jvm.jar  /streampipes-processing-element-container.jar
 
