--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,9 @@
 	<maven.jar.plugin.version>3.1.2</maven.jar.plugin.version>
 	<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
 	<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
+
+	<maven.compiler.source>11</maven.compiler.source>
+	<maven.compiler.target>11</maven.compiler.target>
 </properties>
 
 <name>Apache StreamPipes (incubating)</name>
