--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,8 @@
 	<httpcore-osgi.version>4.4.9</httpcore-osgi.version>
 	<influxdb.version>2.22</influxdb.version>
 	<j2html.version>1.4.0</j2html.version>
-	<jackson.version>2.13.1</jackson.version>
+	<jackson.version>2.13.2</jackson.version>
+        <jackson.databind.version>2.13.2.1</jackson.databind.version>
 	<jakarta-annotation.version>1.3.5</jakarta-annotation.version>
 	<jakarta-activation-api.version>1.2.2</jakarta-activation-api.version>
 	<jakarta-mail.version>1.6.7</jakarta-mail.version>
@@ -82,7 +83,7 @@
 	<jboss-logging-processor.version>2.2.1.Final</jboss-logging-processor.version>
 	<jersey.version>2.35</jersey.version>
 	<jetbrains-annotations.version>16.0.2</jetbrains-annotations.version>
-	<jetty.version>9.4.19.v20190610</jetty.version>
+	<jetty.version>9.4.41.v20210516</jetty.version>
 	<jgrapht.version>1.3.1</jgrapht.version>
 	<jjwt.version>0.11.2</jjwt.version>
 	<json-path.version>3.1.0</json-path.version>
@@ -91,7 +92,7 @@
 	<lightcouch.version>0.2.0</lightcouch.version>
 	<log4j.version>2.17.2</log4j.version>
 	<lz4.version>1.7.1</lz4.version>
-	<logback-classic.version>1.2.11</logback-classic.version>
+	<logback-classic.version>1.2.9</logback-classic.version>
 	<maven-invoker.version>2.2</maven-invoker.version>
 	<mqtt-client.version>1.12</mqtt-client.version>
 	<objenesis.version>2.5.1</objenesis.version>
@@ -167,7 +168,7 @@ IoT data streams.
 				<dependency>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
-					<version>${jackson.version}</version>
+					<version>${jackson.databind.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>com.fasterxml.jackson.dataformat</groupId>
